--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rojo
-        uses: rojo-rbx/setup-rojo@v1
-        with:
-          version: "^7.4"
+      - name: Download and install Rojo
+        run: |
+          curl -L -o rojo.zip "https://github.com/rojo-rbx/rojo/releases/download/v7.4.4/rojo-7.4.4-linux-x86_64.zip"
+          unzip rojo.zip
+          chmod +x rojo
+          sudo mv rojo /usr/local/bin/
 
       - name: Build place file
         working-directory: ./games/endless-escape
