--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,13 +14,8 @@ on:
           - development
           - production
 
-env:
-  ROBLOX_UNIVERSE_ID: ${{ secrets.ROBLOX_UNIVERSE_ID }}
-  ROBLOX_PLACE_ID: ${{ secrets.ROBLOX_PLACE_ID }}
-  ROBLOX_API_KEY: ${{ secrets.ROBLOX_API_KEY }}
-
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
     
     steps:
@@ -38,6 +33,22 @@ jobs:
         rojo build -o EndlessEscape.rbxl
         ls -la EndlessEscape.rbxl
     
+    - name: Publish to Roblox (Open Cloud API)
+      env:
+        ROBLOX_API_KEY: ${{ secrets.ROBLOX_API_KEY }}
+        ROBLOX_UNIVERSE_ID: ${{ secrets.ROBLOX_UNIVERSE_ID }}
+        ROBLOX_PLACE_ID: ${{ secrets.ROBLOX_PLACE_ID }}
+      run: |
+        echo "Publishing to Roblox..."
+        
+        # Use Roblox Open Cloud API directly
+        curl -X POST "https://apis.roblox.com/universes/v1/${ROBLOX_UNIVERSE_ID}/places/${ROBLOX_PLACE_ID}/versions" \
+          -H "x-api-key: ${ROBLOX_API_KEY}" \
+          -H "Content-Type: application/octet-stream" \
+          --data-binary @EndlessEscape.rbxl
+        
+        echo "✅ Published to Roblox successfully!"
+    
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
@@ -45,42 +56,8 @@ jobs:
         path: EndlessEscape.rbxl
         retention-days: 7
 
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Download Build Artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: EndlessEscape-Build
-    
-    - name: Publish to Roblox (Open Cloud)
-      run: |
-        # Install rbxcloud for publishing
-        curl -L https://github.com/SeaDve/rbxcloud/releases/download/v0.8.0/rbxcloud-x86_64-unknown-linux-gnu.tar.gz | tar xz
-        sudo mv rbxcloud /usr/local/bin/
-        
-        # Publish place file using Open Cloud API
-        rbxcloud experience publish \
-          --api-key "$ROBLOX_API_KEY" \
-          --universe-id "$ROBLOX_UNIVERSE_ID" \
-          --place-id "$ROBLOX_PLACE_ID" \
-          --version-type "Published" \
-          --filename "EndlessEscape.rbxl"
-        
-        echo "✅ Published to Roblox successfully!"
-    
-    - name: Get Version Info
-      run: |
-        echo "Version: ${{ github.sha }}"
-        echo "Branch: ${{ github.ref }}"
-        echo "Author: ${{ github.actor }}"
-        echo "Message: ${{ github.event.head_commit.message }}"
-
   release:
-    needs: [build, publish]
+    needs: build-and-publish
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '[release]')
     
@@ -98,21 +75,3 @@ jobs:
         tag_name: v${{ github.run_number }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Notify Discord
-      if: secrets.DISCORD_WEBHOOK != ''
-      run: |
-        curl -X POST "$DISCORD_WEBHOOK" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "embeds": [{
-              "title": "🎮 Endless Escape Updated",
-              "description": "New version published to Roblox!",
-              "color": 65280,
-              "fields": [
-                {"name": "Version", "value": "v${{ github.run_number }}", "inline": true},
-                {"name": "Commit", "value": "${{ github.sha }}".substring(0,7), "inline": true}
-              ],
-              "timestamp": "'$(date -Iseconds)'"
-            }]
-          }'
