Fix: Workflow builds without Roblox secrets, publishes only when configured

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -24,25 +24,30 @@ jobs:
         rojo build -o EndlessEscape.rbxl
         ls -la EndlessEscape.rbxl
     
-    - name: Publish to Roblox (Open Cloud API)
-      env:
-        ROBLOX_API_KEY: ${{ secrets.ROBLOX_API_KEY }}
-        ROBLOX_UNIVERSE_ID: ${{ secrets.ROBLOX_UNIVERSE_ID }}
-        ROBLOX_PLACE_ID: ${{ secrets.ROBLOX_PLACE_ID }}
-      run: |
-        echo "Publishing to Roblox..."
-        
-        # Use Roblox Open Cloud API directly
-        curl -X POST "https://apis.roblox.com/universes/v1/${ROBLOX_UNIVERSE_ID}/places/${ROBLOX_PLACE_ID}/versions" \
-          -H "x-api-key: ${ROBLOX_API_KEY}" \
-          -H "Content-Type: application/octet-stream" \
-          --data-binary @EndlessEscape.rbxl
-        
-        echo "✅ Published to Roblox successfully!"
-    
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
         name: EndlessEscape-Build
         path: EndlessEscape.rbxl
         retention-days: 7
+    
+    - name: Publish to Roblox (if configured)
+      env:
+        ROBLOX_API_KEY: ${{ secrets.ROBLOX_API_KEY }}
+        ROBLOX_UNIVERSE_ID: ${{ secrets.ROBLOX_UNIVERSE_ID }}
+        ROBLOX_PLACE_ID: ${{ secrets.ROBLOX_PLACE_ID }}
+      run: |
+        if [ -z "$ROBLOX_API_KEY" ]; then
+          echo "⚠️ Roblox API key not configured. Skipping publish."
+          echo "Add ROBLOX_API_KEY, ROBLOX_UNIVERSE_ID, and ROBLOX_PLACE_ID secrets to enable auto-publish."
+          exit 0
+        fi
+        
+        echo "Publishing to Roblox..."
+        curl -X POST "https://apis.roblox.com/universes/v1/${ROBLOX_UNIVERSE_ID}/places/${ROBLOX_PLACE_ID}/versions" \
+          -H "x-api-key: ${ROBLOX_API_KEY}" \
+          -H "Content-Type: application/octet-stream" \
+          --data-binary @EndlessEscape.rbxl
+        
+        echo "✅ Published to Roblox successfully!"
+      continue-on-error: true
