--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,41 +13,39 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: List files for debugging
-      run: |
-        echo "=== Project structure ==="
-        find . -type f -name "*.lua" | head -20
-        echo ""
-        echo "=== Checking project.json ==="
-        cat default.project.json
-    
     - name: Install Rojo
       run: |
-        curl -L https://github.com/rojo-rbx/rojo/releases/download/v7.4.4/rojo-7.4.4-linux-x86_64.tar.gz | tar xz
+        # Download and install Rojo
+        wget -q https://github.com/rojo-rbx/rojo/releases/download/v7.4.4/rojo-7.4.4-linux-x86_64.tar.gz
+        tar -xzf rojo-7.4.4-linux-x86_64.tar.gz
+        chmod +x rojo
         sudo mv rojo /usr/local/bin/
-        rojo --version
+        echo "Rojo version:"
+        rojo --version || echo "Rojo might not be in PATH"
+    
+    - name: Verify project structure
+      run: |
+        echo "=== Verifying Lua files ==="
+        find src -name "*.lua" -type f
+        echo ""
+        echo "=== Verifying init.server.lua exists ==="
+        ls -la src/ServerScriptService/Server/init.server.lua
     
     - name: Build Place File
       run: |
+        cd $GITHUB_WORKSPACE
+        echo "Current directory: $(pwd)"
         echo "Building with Rojo..."
-        rojo build default.project.json -o EndlessEscape.rbxl 2>&1 || {
-          echo "Build failed! Checking structure..."
-          ls -la src/
-          exit 1
-        }
+        rojo build default.project.json -o EndlessEscape.rbxl || exit 1
         echo "Build successful!"
-        ls -la EndlessEscape.rbxl
+        ls -la EndlessEscape.rbxl || echo "Output file not found!"
     
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
-      if: always()
       with:
         name: EndlessEscape-Build
-        path: |
-          EndlessEscape.rbxl
-          default.project.json
+        path: EndlessEscape.rbxl
         retention-days: 7
-        if-no-files-found: warn
     
     - name: Publish to Roblox (if configured)
       env:
@@ -57,23 +55,11 @@ jobs:
       run: |
         if [ -z "$ROBLOX_API_KEY" ]; then
           echo "⚠️ Roblox API key not configured. Skipping publish."
-          echo "Add ROBLOX_API_KEY, ROBLOX_UNIVERSE_ID, and ROBLOX_PLACE_ID secrets to enable auto-publish."
           exit 0
-        fi
-        
-        if [ ! -f "EndlessEscape.rbxl" ]; then
-          echo "❌ EndlessEscape.rbxl not found!"
-          exit 1
         fi
         
         echo "Publishing to Roblox..."
         curl -X POST "https://apis.roblox.com/universes/v1/${ROBLOX_UNIVERSE_ID}/places/${ROBLOX_PLACE_ID}/versions" \
           -H "x-api-key: ${ROBLOX_API_KEY}" \
           -H "Content-Type: application/octet-stream" \
-          --data-binary @EndlessEscape.rbxl || {
-            echo "Publish failed - check API credentials"
-            exit 0
-          }
-        
-        echo "✅ Published to Roblox successfully!"
-      continue-on-error: true
+          --data-binary @EndlessEscape.rbxl && echo "✅ Published!" || echo "❌ Publish failed"
