--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,23 +6,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  package:
+  build:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Create Package
+    - name: Install Rojo
       run: |
-        echo "=== Creating game package ==="
-        zip -r EndlessEscape-Source.zip src/ README.md SETUP.md
-        echo "=== Package created ==="
-        ls -lh EndlessEscape-Source.zip
+        echo "=== Installing Rojo ==="
+        curl -fsSL -o rojo.zip "https://github.com/rojo-rbx/rojo/releases/download/v7.6.1/rojo-7.6.1-linux-x86_64.zip"
+        python3 -c "import zipfile; zipfile.ZipFile('rojo.zip').extractall('.')"
+        chmod +x rojo
+        ./rojo --version
     
-    - name: Upload Source Package
+    - name: Build .rbxl file
+      run: |
+        echo "=== Building EndlessEscape.rbxl ==="
+        ./rojo build default.project.json -o EndlessEscape.rbxl
+        echo "=== Build complete ==="
+        ls -lh EndlessEscape.rbxl
+    
+    - name: Upload .rbxl artifact
       uses: actions/upload-artifact@v4
       with:
-        name: EndlessEscape-Source
-        path: EndlessEscape-Source.zip
+        name: EndlessEscape-Game
+        path: EndlessEscape.rbxl
         retention-days: 30
