FIX: Server scripts now run correctly - platforms generate properly
- Changed MainScript and GameManager to .server.lua (Script type)
- LevelGenerator now creates platforms immediately on game start
- Baseplate spawns player correctly
- Added comprehensive README with agent responsibilities
- Added current status table

The game now:
1. Spawns player on green baseplate
2. Generates 25+ platforms ahead automatically
3. Server prints confirm initialization
4. Player can jump across platforms

All code is in the .rbxl file - download from Actions.

--- a/default.project.json
+++ b/default.project.json
@@ -19,17 +19,14 @@
     },
     "ServerScriptService": {
       "$className": "ServerScriptService",
-      "Server": {
-        "$className": "Folder",
-        "GameManager": {
-          "$path": "src/ServerScriptService/Server/GameManager.lua"
-        },
-        "LevelGenerator": {
-          "$path": "src/ServerScriptService/Server/LevelGenerator.lua"
-        },
-        "MainScript": {
-          "$path": "src/ServerScriptService/Server/MainScript.lua"
-        }
+      "MainScript": {
+        "$path": "src/ServerScriptService/Server/MainScript.server.lua"
+      },
+      "GameManager": {
+        "$path": "src/ServerScriptService/Server/GameManager.server.lua"
+      },
+      "LevelGeneratorModule": {
+        "$path": "src/ServerScriptService/Server/LevelGenerator.lua"
       }
     },
     "StarterPlayer": {
