FINAL BUILD: All critical fixes integrated
✅ Audio system (jump, coin, death, checkpoint, milestone sounds + music)
✅ Working shop with DevProducts
✅ Distance tracking (updates every 0.1s)
✅ Coin collection (properly counted)
✅ Dynamic backgrounds (4 zones)
✅ Simplified tutorial
✅ Safety teleport if fall

Download: EndlessEscape-FINAL-v2 from Actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,9 +25,9 @@ jobs:
         ./rojo build default.project.json -o EndlessEscape-FINAL.rbxl
         ls -lh EndlessEscape-FINAL.rbxl
     
-    - name: Upload .rbxl artifact
+    - name: Upload FINAL artifact
       uses: actions/upload-artifact@v4
       with:
-        name: EndlessEscape-v2-FIXED
+        name: EndlessEscape-FINAL-v2
         path: EndlessEscape-FINAL.rbxl
         retention-days: 30
