--- a/default.project.json
+++ b/default.project.json
@@ -1,28 +1,31 @@
 {
-  "name": "EndlessEscape",
+  "name": "CreatureSimulator",
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": {
+      "$className": "ReplicatedStorage",
       "Modules": {
         "$className": "Folder",
-        "PlatformModule": { "$path": "src/ReplicatedStorage/Modules/PlatformModule.lua" },
-        "GameConfig": { "$path": "src/ReplicatedStorage/Modules/GameConfig.lua" }
+        "GameConfig": { "$path": "src/ReplicatedStorage/Modules/GameConfig.lua" },
+        "PetSystem": { "$path": "src/ReplicatedStorage/Modules/PetSystem.lua" }
       }
     },
     "ServerScriptService": {
+      "$className": "ServerScriptService",
       "GameManager": { "$path": "src/ServerScriptService/Server/GameManager.server.lua" },
-      "LevelGenerator": { "$path": "src/ServerScriptService/Server/LevelGenerator.server.lua" }
+      "HatchHandler": { "$path": "src/ServerScriptService/Server/HatchHandler.server.lua" }
     },
     "StarterPlayer": {
+      "$className": "StarterPlayer",
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
         "UI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/UI.client.lua" },
-        "Camera": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/Camera.client.lua" }
+        "HatchUI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/HatchUI.client.lua" }
       }
     },
     "Workspace": {
-      "$properties": { "Gravity": 196.2 },
-      "Spawn": { "$className": "SpawnLocation", "$properties": { "Position": [0, 10, 0] } }
+      "$className": "Workspace",
+      "SpawnLocation": { "$className": "SpawnLocation", "$properties": { "Position": [0, 10, 0] } }
     }
   }
 }
