--- a/default.project.json
+++ b/default.project.json
@@ -20,8 +20,7 @@
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
         "UI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/UI.client.lua" },
-        "HatchUI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/HatchUI.client.lua" },
-        "InventoryUI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/InventoryUI.client.lua" }
+        "HatchUI": { "$path": "src/StarterPlayer/StarterPlayerScripts/Client/HatchUI.client.lua" }
       }
     },
     "Workspace": {
